--- a/frontend_react/public/index.html
+++ b/frontend_react/public/index.html
@@ -13,7 +13,7 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>Taskin</title>
+    <title>Taskin_Mubassir</title>
   </head>
   <body>
     <div id="root"></div>
